fixing overlay not fitting browser window

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .overlay {
-    position: absolute; 
+    position: fixed; 
     top: 0; 
     left: 0; 
     right: 0; 
